# AppUpdateService

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
migrations/2026-01-20-043633-0000_create_posts/: up.sql
migrations/2026-02-05-090031-0000_update/: down.sql  up.sql
migrations/2026-04-03-085704-0000_update/: down.sql  up.sql
migrations/2026-04-08-092348-0000_update/: down.sql  up.sql
migrations/2026-04-09-062059-0000_update/: down.sql  up.sql
migrations/2026-05-09-180000_add_remark_to_app_channel/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs  server.rs
src/api/: app_channel.rs  app_manage.rs  mod.rs  operation_log.rs  ping.rs  users.rs
src/logging/: init.rs  mod.rs
src/middleware/: access_log.rs  mod.rs
src/model/: app_channel.rs  app_manage.rs  body.rs  captcha.rs  error.rs  jwt.rs  mod.rs  operation_log.rs  response.rs  users.rs
src/store/: captcha_store.rs  mod.rs  token_store.rs
src/utils/: apk_utils.rs  app_manage_cleanup_task.rs  auth_captcha_utils.rs  database_utils.rs  json_error_catcher.rs  jwt_service.rs  mod.rs  operation_log_utils.rs  password_utils.rs
